Changed logic for getList to provide a list with actual strings inside of it, instead of an empty list